# bsky-firehose

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  config.py  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/core/: config.py  database.py  logging.py
backend/app/db/: __init__.py  init_db.py  migrations.py
backend/app/models/: jetstream_types.py
backend/app/models/db/: base.py  bluesky.py
backend/app/repositories/: base.py  bluesky.py
backend/app/services/: db_test.py  jetstream_client.py  kafka_client.py  path_test.py  test_connection.py
backend/app/workers/: ingest.py  kafka_ingest.py  persistence.py
backend/tests/: conftest.py  test_firehose_db.py  test_jetstream_db.py  test_message_flow.py  test_postgres.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx
