[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsky-firehose"
version = "0.1.0"
description = "Bluesky Firehose data processing application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "asyncpg>=0.25.0",
    "python-dotenv>=0.19.0",
    "pydantic>=1.8.0",
    "alembic>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]