[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bsky-analytics"
version = "0.1.0"
description = "Bluesky Analytics data processing application"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "sqlalchemy>=1.4.0",
    "asyncpg>=0.25.0",
    "alembic>=1.7.0",
    "python-dotenv>=0.19.0",
    "pydantic",
    "pydantic-settings",
    "atproto>=0.0.57",
    "aiokafka>=0.8.1",
    "websockets>=13.0",
    "zstandard>=0.23",
]

[project.optional-dependencies]
# Development tools that aren't needed in production
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",  # For async test support
    "pytest-cov>=4.1.0",       # For test coverage reporting
    "isort>=5.0",
    "testcontainers>=3.7.0",   # For container-based testing
    "httpx>=0.24.0",           # For async HTTP client testing
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
asyncio_default_fixture_loop_scope = "session"  # Add this line

[tool.hatch.build.targets.wheel]
packages = ["."]

# Package discovery to enable dockerfile to discover /backend module
[tool.hatch.build]
include = [
    "backend/**/*.py",
    "backend/**/*.pyi"
]